--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,12 @@
     <string name="edit">Edit</string>
     <string name="delete">Delete</string>
     <string name="add">Add</string>
+    <string name="SubscriptionName">TextView</string>
+    <string name="monthly_charge">Monthly Charge:</string>
+    <string name="subscription">Subscription</string>
+    <string name="date">Date:</string>
+    <string name="_2018_01_17">2018-01-17</string>
+    <string name="_00_00">00.00</string>
+    <string name="comment">Comment:</string>
+    <string name="cccccccccccccccccccccccccccccc">CCCCCCCCCCCCCCCCCCCCCCCCCCCCCC</string>
 </resources>
