Add subscription dialog was swapped for a better functioning add subcription activity. An edit subscription activity was added too. Lastly, the subscription adapter and recycler view on click functionalities had their respective video tutorials cited.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
     <string name="subscription">SSSSSSSSSSSSSSSSSSSSZZZZZ</string>
     <string name="date">2018-01-17</string>
     <string name="comment">CCCCCCCCCCCCCCCCCCCCCCCCCCCCCC</string>
+    <string name="save">Save</string>
+    <string name="subscription_name">Subscription Name</string>
+    <string name="cancel">Cancel</string>
 </resources>
